@@ -10,10 +10,7 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import ru.otus.recipes.domain.DailyMenu;
 import ru.otus.recipes.domain.MealRecipe;
 import ru.otus.recipes.domain.Menu;
-import ru.otus.recipes.dto.DailyMenuDto;
-import ru.otus.recipes.dto.MealRecipeDto;
-import ru.otus.recipes.dto.MenuDto;
-import ru.otus.recipes.dto.RecipeDto;
+import ru.otus.recipes.dto.*;
 import ru.otus.recipes.exception.EntityExistsException;
 import ru.otus.recipes.exception.EntityNotFoundException;
 import ru.otus.recipes.repository.DailyMenuRepository;
@@ -21,8 +18,7 @@ import ru.otus.recipes.service.mapper.DailyMenuMapper;
 
 import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 
@@ -32,14 +28,15 @@ class DailyMenuServiceTest {
     private static final String RECIPE_DESCRIPTION = "testDescription";
     private static final String INSTRUCTIONS = "testInstructions";
     private static final Integer COOK_TIME = 30;
-    private static final Integer LEVEL_ID = 1;
-    private static final Integer CUISINE_ID = 1;
+    private static final LevelDto LEVEL_DTO = new LevelDto(1);
+    private static final CuisineDto CUISINE_DTO = new CuisineDto("testCuisine");
+    public static final MealDto MEAL_DTO = new MealDto("testMeal");
     private static final Integer RATING = 1;
     private static final String IMAGE_PATH = "testImagePath";
     private static final Long ID = 1L;
     private static final Long ID_UPDATE = 2L;
     private static final Long DTO_ID = 1L;
-    private static final Long DTO_ID_UPDATE = 2L;
+    private MenuDto menuDtoUpdated;
     private DailyMenu persistedEntity;
     private DailyMenuDto dto;
 
@@ -54,15 +51,26 @@ class DailyMenuServiceTest {
     @BeforeEach
     void setUp() {
         service = new DailyMenuService(repository, mapper);
+        NutritionalInformationDto nutritionalInformationDto = new NutritionalInformationDto("testNutrition");
+        IngredientNutritionalDto ingredientNutritionalDto = new IngredientNutritionalDto(nutritionalInformationDto,1);
+        IngredientDto ingredientDto= new IngredientDto("testIngredient", Collections.singletonList(ingredientNutritionalDto));
+        MeasurementDto measurementDto = new MeasurementDto("testMeasurement");
+        RecipeIngredientDto recipeIngredientDto = new RecipeIngredientDto(ingredientDto,1,measurementDto);
+        FoodCategoryDto foodCategoryDto = new FoodCategoryDto("testFoodCategory");
+        CourseDto courseDto = new CourseDto("testCourse");
+        MealDto mealDto = new MealDto("testMeal");
         MealRecipe mealRecipe = new MealRecipe();
         mealRecipe.setId(ID);
         RecipeDto recipeDto =
-                new RecipeDto(1, RECIPE_NAME, RECIPE_DESCRIPTION, INSTRUCTIONS, COOK_TIME, LEVEL_ID, CUISINE_ID, RATING, IMAGE_PATH,
-                        new HashMap<>(), Arrays.asList(1L, 2L), Arrays.asList(1L, 2L), Arrays.asList(1L, 2L));
-        MealRecipeDto mealRecipeDto = new MealRecipeDto(DTO_ID, new HashSet<>(List.of(recipeDto)),null);
+                new RecipeDto(0,RECIPE_NAME,RECIPE_DESCRIPTION,INSTRUCTIONS,COOK_TIME, LEVEL_DTO, CUISINE_DTO,RATING,IMAGE_PATH,
+                        Collections.singletonList(recipeIngredientDto), Collections.singletonList(courseDto), Collections.singletonList(foodCategoryDto),
+                        Collections.singletonList(mealDto));
+        MealRecipeDto mealRecipeDto = new MealRecipeDto(MEAL_DTO , new HashSet<>(List.of(recipeDto)));
         Menu menu = new Menu(ID, List.of(mealRecipe));
         persistedEntity = new DailyMenu(ID,Calendar.getInstance().getTime(),menu);
-        dto = new DailyMenuDto(Calendar.getInstance().getTime(),DTO_ID);
+        MenuDto menuDto = new MenuDto(Collections.singletonList(mealRecipeDto));
+        menuDtoUpdated = new MenuDto(Collections.emptyList());
+        dto = new DailyMenuDto(Calendar.getInstance().getTime(),menuDto);
         dto.setId(1L);
 
         DailyMenu dailyMenu =  new DailyMenu(ID,Calendar.getInstance().getTime(),menu);
@@ -81,11 +89,11 @@ class DailyMenuServiceTest {
     @Test
     @DisplayName("Обновление meal entity")
     void update() throws EntityNotFoundException {
-        dto.setMenuId(ID_UPDATE);
+        dto.setMenu(menuDtoUpdated);
         Mockito.when(repository.findById(anyLong())).thenReturn(Optional.of(persistedEntity));
         Mockito.when(repository.save(any(DailyMenu.class))).thenReturn(persistedEntity);
         Mockito.when(mapper.toDto(any(DailyMenu.class))).thenReturn(dto);
-        assertEquals(ID_UPDATE, service.update(dto).getMenuId());
+        assertTrue(service.update(dto).getMenu().getMealRecipes().isEmpty());
     }
 
     @Test
